--- a/.example.env
+++ b/.example.env
@@ -12,8 +12,8 @@
 
 # --- LLM Service URLs ---
 # Base URL for your Ollama LLM inference server.
-# Default is for your AI Workhorse (10GbE direct link).
-OLLAMA_BASE_URL=http://10.0.0.2:11434
+# Default assumes Ollama is running locally or in Docker.
+OLLAMA_BASE_URL=http://localhost:11434
 
 # ANTHROPIC_API_KEY for Claude API access.
 # This specific key should ideally be managed securely by your SecretsMCP
@@ -22,31 +22,39 @@ OLLAMA_BASE_URL=http://10.0.0.2:11434
 # ANTHROPIC_API_KEY=sk-your-claude-api-key-here
 
 # --- MCP Service URLs ---
+# These can point to:
+# 1. Our reference implementations (see docs/CUSTOM_MCP_SETUP.md)
+# 2. Your own implementations
+# 3. Community implementations (see docs/COMMUNITY_MCPS.md)
+# 4. Local Docker containers (default)
+
 # URL for your custom Codebase Summary MCP service.
 # This MCP provides context about your project's code.
-CODEBASE_SUMMARY_MCP_URL=http://10.0.0.2:8003
+# For CodebaseSummaryMCP, see: https://github.com/colinaulds/codebase-summary-mcp (to be published)
+CODEBASE_SUMMARY_MCP_URL=http://localhost:8003
 
 # URL for your custom Secrets MCP service.
 # This MCP securely manages and serves environment variables/API keys.
-SECRETS_MCP_URL=http://10.0.0.2:8004
+# For SecretsMCP, see: https://github.com/colinaulds/secrets-mcp (to be published)
+SECRETS_MCP_URL=http://localhost:8004
 
 # URL for your MCP-Sequential-Thinking service (e.g., from glama.ai).
 # Provides structured reasoning and task breakdown.
-MCP_SEQUENTIAL_THINKING_URL=http://10.0.0.2:8001
+MCP_SEQUENTIAL_THINKING_URL=http://localhost:8001
 
 # URL for your Context7 service (e.g., from Upstash/GitHub for RAG).
 # Provides vector-database backed context retrieval for documentation/memory.
-CONTEXT7_URL=http://10.0.0.2:8002
+CONTEXT7_URL=http://localhost:8002
 
 # URL for your Brave Search or similar Web Search MCP.
 # Enables agents to perform web searches for external information.
-BRAVE_SEARCH_MCP_URL=http://10.0.0.2:8005
+BRAVE_SEARCH_MCP_URL=http://localhost:8005
 
 # --- Automation Service URLs ---
 # Base URL for triggering your n8n workflows.
-# This should point to the webhook endpoint exposed by your n8n instance,
-# likely routed through your Nginx Proxy Manager.
-N8N_WEBHOOK_BASE_URL=http://192.168.1.3:80/n8n/webhook/
+# This should point to the webhook endpoint exposed by your n8n instance.
+# Default assumes n8n is running locally or accessible via Docker.
+N8N_WEBHOOK_BASE_URL=http://localhost:5678/webhook/
 
 # --- Authentication Tokens ---
 # This token authenticates ai_rails_backend.py to the SecretsMCP service.
